--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 19
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 19
       - name: npm install
-      - run: npm install
+        run: npm install
       - run: npm run build --prefix client
       - run: npm run test
