--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches: [main]
 jobs:
+  env:
+    CI: true
+    MONGODB_URL: mongodb://localhost/senior-welfare-center
   build:
     runs-on: ubuntu-latest
     steps:
@@ -11,6 +14,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 19
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.10.0
       - name: npm install
         run: npm install
       - run: npm run build --prefix client
