--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,19 +3,25 @@ on:
   push:
     branches: [main]
 jobs:
-  env:
-    CI: true
-    MONGODB_URL: mongodb://localhost/senior-welfare-center
   build:
+    env:
+      CI: true
+      MONGODB_URL: mongodb://localhost/senior-welfare-center
+    strategy:
+      matrix:
+        node-version: [19]
+        mongodb-version: [4.4]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 19
         uses: actions/setup-node@v2
         with:
-          node-version: 19
+          node-version: ${{ matrix.node-version }}
       - name: MongoDB in GitHub Actions
         uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
       - name: npm install
         run: npm install
       - run: npm run build --prefix client
