--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
