🐛 all/fix: manifest 오류 임시 수정

--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "senior-welfare-center",
   "short_name": "senior-welfare-center",
-  "start_url": "/",
+  "start_url": "/assets/nested-b89ffa2c.js",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#fff",
