--- a/client/.gitignore
+++ b/client/.gitignore
@@ -27,6 +27,8 @@ dist-ssr
 .DS_Store
 .env
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
