--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
+    "jotai": "^2.6.0",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
