fix: reinstall yarn berry

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
   },
   "references": [
     {
-      "path": "packages/senior-welfare-center-client"
+      "path": "packages/client"
     }
   ],
   "include": []
