--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "packages/server"
   ],
   "scripts": {
+    "lint": "eslint ./packages --ext .ts,.tsx,.js,.jsx --cache --fix",
     "senior-welfare-center-client": "yarn workspace senior-welfare-center-client dev"
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.11.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.73",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
