--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,7 @@
   "packageManager": "yarn@4.1.1",
   "main": "src/main.tsx",
   "scripts": {
-    "dev": "yarn vite",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest",
