--- a/packages/client/dockerfile
+++ b/packages/client/dockerfile
@@ -7,16 +7,16 @@ FROM node:lts-alpine
 WORKDIR /app/client
 
 # Copy yarn.lock file from root
-COPY yarn.lock ./
+COPY /root/yarn.lock ./
 
 # Copy dependencies
-COPY packages/client/package.json .
+COPY /root/packages/client/package.json .
 
 # Install dependencies
 RUN yarn install
 
 # Copy source code
-COPY packages/client/src .
+COPY /root/packages/client/src .
 
 # Build the application
 RUN yarn build
