--- a/dockerfile.client
+++ b/dockerfile.client
@@ -13,7 +13,9 @@ RUN npm install -g corepack \
     && corepack enable
 
 # Install yarn globally with the specified version
-RUN npm install -g yarn@4.1.1 --force
+RUN npm install -g yarn
+
+RUN yarn set version berry
 
 # Install project dependencies
 RUN yarn install --immutable --immutable-cache --check-cache
