--- a/dockerfile.client
+++ b/dockerfile.client
@@ -13,9 +13,7 @@ RUN npm install -g corepack \
     && corepack enable
 
 # Install yarn globally with the specified version
-RUN npm install -g yarn --force
-
-RUN yarn set version berry
+RUN npm install yarn --global --force
 
 # Install project dependencies
 RUN yarn install --immutable --immutable-cache --check-cache
