--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -37,7 +37,8 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
-            sudo docker rm -f $(docker ps -aqf "name=senior-welfare-center") # 컨테이너 찾아서 종료
+            sudo docker rm -f $(docker ps -aq)
+            sudo docker image rm -f dencs/senior-welfare-center:latest
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
             sudo docker run -d -p 80:80 --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
             sudo docker image prune -f
