--- a/dockerfile.client
+++ b/dockerfile.client
@@ -25,5 +25,16 @@ COPY . ./
 RUN yarn install --immutable \
     && yarn client:build
 
-# Expose port
-EXPOSE 8000 
+#pull the official nginx:1.24.0 base image
+FROM nginx:1.24.0
+#copies React to the container directory
+# Set working directory to nginx resources directory
+# WORKDIR /usr/share/nginx/html
+COPY ./nginx/client.conf /etc/nginx/conf.d/default.conf
+# Remove default nginx static resources
+RUN rm -rf ./usr/share/nginx/html/*
+# Copies static resources from builder stage
+COPY --from=builder /app/packages/client/dist /usr/share/nginx/html/
+# Containers run nginx with global directives and daemon off
+EXPOSE 3100
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
