--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -13,7 +13,11 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checko
+
+        # 도커 빌드 관련 셋업
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
