--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checko
+        uses: actions/checkout@v2
 
         # 도커 빌드 관련 셋업
       - name: Set up Docker Buildx
