--- a/dockerfile.client
+++ b/dockerfile.client
@@ -1,7 +1,7 @@
 # Dockerfile for client project
 
 # Base image
-FROM node:lts-alpine
+FROM node:lts-alpine AS builder
 
 # Set working directory
 WORKDIR /app
