--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -15,7 +15,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-        # 도커 빌드 관련 셋업
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -26,13 +25,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./dockerfile.client
-          platforms: linux/amd64
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:client-latest
+        run: docker-compose -f docker-compose.yml build
+
+      - name: Push Docker image
+        run: docker-compose -f docker-compose.yml push
 
       - name: SSH into EC2 and run Docker container
         uses: appleboy/ssh-action@master
@@ -41,8 +37,6 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
-            sudo docker rm -f $(docker ps -aq)
-            sudo docker image rm -f dencs/senior-welfare-center:latest
-            sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
-            sudo docker run -d -p 3100:3100 --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
-            sudo docker image prune -f
+            sudo docker-compose -f /path/to/docker-compose.yml down
+            sudo docker-compose -f /path/to/docker-compose.yml pull
+            sudo docker-compose -f /path/to/docker-compose.yml up -d
