--- a/nginx/client.conf
+++ b/nginx/client.conf
@@ -1,12 +1,12 @@
 server {
-    listen 3100;
-    root /usr/share/nginx/html;
-    index index.html;
-
+    listen 433;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
     location / {
-        try_files $uri /index.html;
+        # root를 /usr/share/nginx/html 을 바라보게 했으므로(dockerfile.client 참고)
+        # 해당 경로 아래에 배포
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
- 
-    error_log /var/log/nginx/api_error.log;
-    access_log /var/log/nginx/api_access.log;
 }
