--- a/dockerfile.client
+++ b/dockerfile.client
@@ -30,11 +30,11 @@ FROM nginx:1.24.0
 #copies React to the container directory
 # Set working directory to nginx resources directory
 # WORKDIR /usr/share/nginx/html
-COPY ./nginx/client.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/client.conf /etc/nginx/conf.d
 # Remove default nginx static resources
 RUN rm -rf ./usr/share/nginx/html/*
 # Copies static resources from builder stage
 COPY --from=builder /app/packages/client/dist /usr/share/nginx/html/
 # Containers run nginx with global directives and daemon off
-EXPOSE 433
+EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
