--- a/nginx/client.conf
+++ b/nginx/client.conf
@@ -1,7 +1,13 @@
 server {
-    listen 433;
+    listen 80;
+    server_name *.xn--zb0bt8fd6lsrkqxc.com;
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
+
+    if ($http_x_forwarded_proto = 'http') {
+        return 301 https://$host$request_uri;
+    }
+
     location / {
         # root를 /usr/share/nginx/html 을 바라보게 했으므로(dockerfile.client 참고)
         # 해당 경로 아래에 배포
@@ -9,4 +15,9 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+
+    ssl_certificate /etc/letsencrypt/live/<SSL 발급받은 도메인 이름>/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/<SSL 발급받은 도메인 이름>/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
