--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -37,8 +37,11 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
-            sudo docker rm -f $(docker ps -aq)
-            sudo docker image rm -f dencs/senior-welfare-center:latest
+            CONTAINERS=$(sudo docker ps -a -q --filter "ancestor=${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest")
+            for CONTAINER_ID in $CONTAINERS
+            do
+                sudo docker rm -f $CONTAINER_ID
+            done
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
             sudo docker run -d -p 80:80 --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:client-latest
             sudo docker image prune -f
