--- a/.github/workflows/release-server-app.yml
+++ b/.github/workflows/release-server-app.yml
@@ -37,7 +37,11 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
-            sudo docker rm -f $(docker ps -aqf "name=senior-welfare-center") # 컨테이너 찾아서 종료
+            CONTAINERS=$(sudo docker ps -a -q --filter "ancestor=${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest")
+            for CONTAINER_ID in $CONTAINERS
+            do
+                sudo docker rm -f $CONTAINER_ID
+            done
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest
             sudo docker run -d -p 8000:8000 --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest
             sudo docker image prune -f
