--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "scripts": {
     "lint": "eslint ./packages --ext .ts,.tsx,.js,.jsx --cache --fix",
-    "client:build": "yarn workspace senior-welfare-center-client build"
+    "client:build": "yarn workspace senior-welfare-center-client build",
+    "server:start": "yarn workspace senior-welfare-center-server start"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.11.0",
