--- a/.github/workflows/release-server-app.yml
+++ b/.github/workflows/release-server-app.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./dockerfile.server
+          file: ./Dockerfile.server
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:server-latest
