--- a/.github/workflows/release-server-app.yml
+++ b/.github/workflows/release-server-app.yml
@@ -43,5 +43,11 @@ jobs:
                 sudo docker rm -f $CONTAINER_ID
             done
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest
-            sudo docker run -d -p 8000:8000 --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest
+            sudo docker run \
+            -e MONGODB_URL=${{ secrets.MONGODB_URL }} \
+            -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+            -e KAKAO_REST_API_KEY=${{ secrets.KAKAO_REST_API_KEY }} \
+            -e KAKAO_REDIRECT_URI=${{ secrets.KAKAO_REDIRECT_URI }} \
+            -d -p 8000:8000 \
+            --name ${{secrets.DOCKERHUB_REPO}} ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO}}:server-latest
             sudo docker image prune -f
