--- a/nginx/client.conf
+++ b/nginx/client.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://senior-welfare-center-server:8000;
+        proxy_pass http://172.17.0.3:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
