--- a/nginx/client.conf
+++ b/nginx/client.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location / {
-        # root를 /usr/share/nginx/html 을 바라보게 했으므로(dockerfile.client 참고)
+        # root를 /usr/share/nginx/html 을 바라보게 했으므로(Dockerfile.client 참고)
         # 해당 경로 아래에 배포
         root   /usr/share/nginx/html;
         index  index.html index.htm;
