--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -21,6 +21,14 @@ RUN yarn install --immutable --immutable-cache --check-cache
 # Copies everything over to Docker environment
 COPY . ./
 
+# Set Vite environment variables during build time
+ARG VITE_KAKAO_API_KEY
+ARG VITE_KAKAO_REDIRECT_URI
+ARG VITE_ADDRESS_API_KEY
+ENV VITE_KAKAO_API_KEY=${VITE_KAKAO_API_KEY}
+ENV VITE_KAKAO_REDIRECT_URI=${VITE_KAKAO_REDIRECT_URI}
+ENV VITE_ADDRESS_API_KEY=${VITE_ADDRESS_API_KEY}
+
 # Build the application
 RUN yarn install --immutable \
     && yarn client:build
