--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -25,9 +25,9 @@ COPY . ./
 ARG VITE_KAKAO_API_KEY
 ARG VITE_KAKAO_REDIRECT_URI
 ARG VITE_ADDRESS_API_KEY
-ENV VITE_KAKAO_API_KEY=${VITE_KAKAO_API_KEY}
-ENV VITE_KAKAO_REDIRECT_URI=${VITE_KAKAO_REDIRECT_URI}
-ENV VITE_ADDRESS_API_KEY=${VITE_ADDRESS_API_KEY}
+ENV VITE_KAKAO_API_KEY=$VITE_KAKAO_API_KEY
+ENV VITE_KAKAO_REDIRECT_URI=$VITE_KAKAO_REDIRECT_URI
+ENV VITE_ADDRESS_API_KEY=$VITE_ADDRESS_API_KEY
 
 # Build the application
 RUN yarn install --immutable \
