🐛 client/fix: fix workflow args to build-args

--- a/.github/workflows/release-client-app.yml
+++ b/.github/workflows/release-client-app.yml
@@ -27,9 +27,9 @@ jobs:
           context: .
           file: ./Dockerfile.client
           build-args: |
-            --build-arg VITE_KAKAO_API_KEY=${{ secrets.VITE_KAKAO_API_KEY }}
-            --build-arg VITE_KAKAO_REDIRECT_URI=${{ secrets.VITE_KAKAO_REDIRECT_URI }}
-            --build-arg VITE_ADDRESS_API_KEY=${{ secrets.VITE_ADDRESS_API_KEY }}
+            VITE_KAKAO_API_KEY=${{ secrets.VITE_KAKAO_API_KEY }}
+            VITE_KAKAO_REDIRECT_URI=${{ secrets.VITE_KAKAO_REDIRECT_URI }}
+            VITE_ADDRESS_API_KEY=${{ secrets.VITE_ADDRESS_API_KEY }}
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:client-latest
