🔧 client/chore: add emotion css prop type in tsconfig

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
 
-    "types": ["vitest/globals"]
+    "types": ["@emotion/react/types/css-prop", "vitest/globals"]
   },
   "include": ["vite.config.ts", "src", "custom.d.ts"]
 }
