--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,5 +5,5 @@
 
     "types": ["@emotion/react/types/css-prop", "vitest/globals"]
   },
-  "include": ["vite.config.ts", "src", "custom.d.ts"]
+  "include": ["vite.config.ts", "src", "custom.d.ts", "@types/*"]
 }
