🔧 all/chore: modify include in tsconfig

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,5 +5,11 @@
 
     "types": ["@emotion/react/types/css-prop", "vitest/globals"]
   },
-  "include": ["vite.config.ts", "src", "custom.d.ts", "@types/*"]
+  "include": [
+    "vite.config.ts",
+    "src",
+    "custom.d.ts",
+    "@types/*",
+    "src/components/swiper/swiper"
+  ]
 }
