🔥 client/fix: remove unuse config

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,11 +5,5 @@
 
     "types": ["@emotion/react/types/css-prop", "vitest/globals"]
   },
-  "include": [
-    "vite.config.ts",
-    "src",
-    "custom.d.ts",
-    "@types/*",
-    "src/components/swiper/swiper"
-  ]
+  "include": ["vite.config.ts", "src", "custom.d.ts", "@types/*"]
 }
