🔥 common/fix: remove unuse config

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -8,10 +8,5 @@
 
     "types": ["@emotion/react/types/css-prop", "vitest/globals"]
   },
-  "include": [
-    "vite.config.ts",
-    "@types/*",
-    "src/**/*",
-    "../client/src/components/swiper"
-  ]
+  "include": ["vite.config.ts", "@types/*", "src/**/*"]
 }
